kubernetes/apps/infra-cluster/netbox/netbox/config/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    pod-security.kubernetes.io/enforce: restricted
